web: handle static files
now statically served:
 * favicon.png
 * main.css

--- a/resources/templates/layout.html
+++ b/resources/templates/layout.html
@@ -7,15 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
-    <style type="text/css">
-        body {
-            padding-top: 20px;
-            padding-bottom: 20px;
-        }
-        .larger {
-            font-size: 1.2em;
-        }
-    </style>
+    <link rel="stylesheet" media="screen" href="/static/css/main.css">
+    <link rel="shortcut icon" type="image/png" href="/static/favicon.png">
 </head>
 <body>
     <div class="container">
