templates: fix UC name problems

--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -5,7 +5,7 @@
 
 <form action="/oauth/registration" method="post" class="form-horizontal">
 
-    <h4>Personal information</h4>
+    <h4>User information</h4>
     <hr>
     <div class="form-group">
         <label for="reg-title" class="col-sm-3 control-label">Title</label>
@@ -16,19 +16,19 @@
     <div class="form-group">
         <label for="reg-fn" class="col-sm-3 control-label">First name</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-fn" name="firstName" placeholder="First Name">
+            <input type="text" class="form-control" id="reg-fn" name="firstname" placeholder="First Name">
         </div>
     </div>
     <div class="form-group">
         <label for="reg-mn" class="col-sm-3 control-label">Middle name</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-mn" name="middleName" placeholder="Middle Name">
+            <input type="text" class="form-control" id="reg-mn" name="middlename" placeholder="Middle Name">
         </div>
     </div>
     <div class="form-group">
         <label for="reg-ln" class="col-sm-3 control-label">Last name</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-ln" name="lastName" placeholder="Last Name">
+            <input type="text" class="form-control" id="reg-ln" name="lastname" placeholder="Last Name">
         </div>
     </div>
     <div class="form-group">
@@ -46,7 +46,7 @@
     <div class="form-group">
         <div class="col-sm-offset-3 col-sm-9 checkbox">
             <label for="reg-email-public">
-                <input type="checkbox" id="reg-email-public" name="emailPublic">
+                <input type="checkbox" id="reg-email-public" name="emailpublic">
                 Make e-mail public
             </label>
         </div>
@@ -82,7 +82,7 @@
     <div class="form-group">
         <div class="col-sm-offset-3 col-sm-9 checkbox">
             <label for="reg-affiliation-public">
-                <input type="checkbox" id="reg-affiliation-public" name="affiliationPublic">
+                <input type="checkbox" id="reg-affiliation-public" name="affiliationpublic">
                 Make affiliation public
             </label>
         </div>
@@ -100,7 +100,7 @@
     <div class="form-group">
         <label for="reg-password-control" class="col-sm-3 control-label">Re-enter password</label>
         <div class="col-sm-9">
-            <input type="password" class="form-control" id="reg-password-control" name="passwordControl" placeholder="Password">
+            <input type="password" class="form-control" id="reg-password-control" name="passwordcontrol" placeholder="Password">
         </div>
     </div>
     <div class="form-group">
