oauth: use account struct for registration parsing

--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -46,7 +46,7 @@
     <div class="form-group">
         <div class="col-sm-offset-3 col-sm-9 checkbox">
             <label for="reg-email-public">
-                <input type="checkbox" id="reg-email-public" name="email_public" value="true">
+                <input type="checkbox" id="reg-email-public" name="is_email_public" value="true">
                 Make e-mail public
             </label>
         </div>
@@ -82,7 +82,7 @@
     <div class="form-group">
         <div class="col-sm-offset-3 col-sm-9 checkbox">
             <label for="reg-affiliation-public">
-                <input type="checkbox" id="reg-affiliation-public" name="affiliation_public" value="true">
+                <input type="checkbox" id="reg-affiliation-public" name="is_affiliation_public" value="true">
                 Make affiliation public
             </label>
         </div>
