templates: add required field mark

--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="reg-fn" class="col-sm-3 control-label">First name</label>
+        <label for="reg-fn" class="col-sm-3 control-label">First name *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-fn" name="first_name" placeholder="First Name">
         </div>
@@ -26,19 +26,19 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="reg-ln" class="col-sm-3 control-label">Last name</label>
+        <label for="reg-ln" class="col-sm-3 control-label">Last name *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-ln" name="last_name" placeholder="Last Name">
         </div>
     </div>
     <div class="form-group">
-        <label for="reg-login" class="col-sm-3 control-label">Login</label>
+        <label for="reg-login" class="col-sm-3 control-label">Login *</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-login" name="login" placeholder="Login, enter 'test'">
+            <input type="text" class="form-control" id="reg-login" name="login" placeholder="Login">
         </div>
     </div>
     <div class="form-group">
-        <label for="reg-email" class="col-sm-3 control-label">e-mail address</label>
+        <label for="reg-email" class="col-sm-3 control-label">e-mail address *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-email" name="email" placeholder="e-mail address">
         </div>
@@ -56,25 +56,25 @@
     <h4>Affiliation</h4>
     <hr>
     <div class="form-group">
-        <label for="reg-institute" class="col-sm-3 control-label">Institute</label>
+        <label for="reg-institute" class="col-sm-3 control-label">Institute *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-institute" name="institute" placeholder="Institute">
         </div>
     </div>
     <div class="form-group">
-        <label for="reg-department" class="col-sm-3 control-label">Department</label>
+        <label for="reg-department" class="col-sm-3 control-label">Department *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-department" name="department" placeholder="Department">
         </div>
     </div>
     <div class="form-group">
-        <label for="reg-city" class="col-sm-3 control-label">City</label>
+        <label for="reg-city" class="col-sm-3 control-label">City *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-city" name="city" placeholder="City">
         </div>
     </div>
     <div class="form-group">
-        <label for="reg-country" class="col-sm-3 control-label">Country</label>
+        <label for="reg-country" class="col-sm-3 control-label">Country *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-country" name="country" placeholder="Country">
         </div>
@@ -92,13 +92,13 @@
     <h4>Password</h4>
     <hr>
     <div class="form-group">
-        <label for="reg-password-input" class="col-sm-3 control-label">Password</label>
+        <label for="reg-password-input" class="col-sm-3 control-label">Password *</label>
         <div class="col-sm-9">
             <input type="password" class="form-control" id="reg-password-input" name="password" placeholder="Password">
         </div>
     </div>
     <div class="form-group">
-        <label for="reg-password-control" class="col-sm-3 control-label">Re-enter password</label>
+        <label for="reg-password-control" class="col-sm-3 control-label">Re-enter password *</label>
         <div class="col-sm-9">
             <input type="password" class="form-control" id="reg-password-control" name="password_control" placeholder="Password">
         </div>
