--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -16,37 +16,37 @@
     <div class="form-group">
         <label for="reg-title" class="col-sm-3 control-label">Title</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-title" name="title" placeholder="Title">
+            <input type="text" class="form-control" id="reg-title" name="title" placeholder="Title" value="{{ .Title.String }}">
         </div>
     </div>
     <div class="form-group">
         <label for="reg-fn" class="col-sm-3 control-label">First name *</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-fn" name="first_name" placeholder="First Name">
+            <input type="text" class="form-control" id="reg-fn" name="first_name" placeholder="First Name" value="{{ .FirstName }}">
         </div>
     </div>
     <div class="form-group">
         <label for="reg-mn" class="col-sm-3 control-label">Middle name</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-mn" name="middle_name" placeholder="Middle Name">
+            <input type="text" class="form-control" id="reg-mn" name="middle_name" placeholder="Middle Name" value="{{ .MiddleName.String }}">
         </div>
     </div>
     <div class="form-group">
         <label for="reg-ln" class="col-sm-3 control-label">Last name *</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-ln" name="last_name" placeholder="Last Name">
+            <input type="text" class="form-control" id="reg-ln" name="last_name" placeholder="Last Name" value="{{ .LastName }}">
         </div>
     </div>
     <div class="form-group">
         <label for="reg-login" class="col-sm-3 control-label">Login *</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-login" name="login" placeholder="Login">
+            <input type="text" class="form-control" id="reg-login" name="login" placeholder="Login" value="{{ .Login }}">
         </div>
     </div>
     <div class="form-group">
         <label for="reg-email" class="col-sm-3 control-label">e-mail address *</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-email" name="email" placeholder="e-mail address">
+            <input type="text" class="form-control" id="reg-email" name="email" placeholder="e-mail address" value="{{ .Email }}">
         </div>
     </div>
     <div class="form-group">
@@ -64,31 +64,31 @@
     <div class="form-group">
         <label for="reg-institute" class="col-sm-3 control-label">Institute *</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-institute" name="institute" placeholder="Institute">
+            <input type="text" class="form-control" id="reg-institute" name="institute" placeholder="Institute" value="{{ .Institute }}">
         </div>
     </div>
     <div class="form-group">
         <label for="reg-department" class="col-sm-3 control-label">Department *</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-department" name="department" placeholder="Department">
+            <input type="text" class="form-control" id="reg-department" name="department" placeholder="Department" value="{{ .Department }}">
         </div>
     </div>
     <div class="form-group">
         <label for="reg-city" class="col-sm-3 control-label">City *</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-city" name="city" placeholder="City">
+            <input type="text" class="form-control" id="reg-city" name="city" placeholder="City" value="{{ .City }}">
         </div>
     </div>
     <div class="form-group">
         <label for="reg-country" class="col-sm-3 control-label">Country *</label>
         <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-country" name="country" placeholder="Country">
+            <input type="text" class="form-control" id="reg-country" name="country" placeholder="Country" value="{{ .Country }}">
         </div>
     </div>
     <div class="form-group">
         <div class="col-sm-offset-3 col-sm-9 checkbox">
             <label for="reg-affiliation-public">
-                <input type="checkbox" id="reg-affiliation-public" name="is_affiliation_public" value="true">
+                <input type="checkbox" id="reg-affiliation-public" name="is_affiliation_public"  value="true">
                 Make affiliation public
             </label>
         </div>
