template: add validation messages

--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -3,9 +3,9 @@
 <h1>Register Account</h1>
 <hr><br />
 
-{{ if .HasErr }}
+{{ if .ValidationError.Message }}
 <div class="alert alert-danger fade in">
-    <strong>Registration warning:</strong> {{ .ErrMessage }}
+    <strong>{{ .ValidationError.Message }}</strong>
 </div>
 {{ end }}
 
@@ -19,10 +19,13 @@
             <input type="text" class="form-control" id="reg-title" name="title" placeholder="Title" value="{{ .Title.String }}">
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group {{ if .FieldErrors.first_name }}has-error{{ end }}">
         <label for="reg-fn" class="col-sm-3 control-label">First name *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-fn" name="first_name" placeholder="First Name" value="{{ .FirstName }}">
+            {{ if .FieldErrors.first_name }}
+                <span class="help-block">{{ .FieldErrors.first_name }}</span>
+            {{ end }}
         </div>
     </div>
     <div class="form-group">
@@ -31,22 +34,31 @@
             <input type="text" class="form-control" id="reg-mn" name="middle_name" placeholder="Middle Name" value="{{ .MiddleName.String }}">
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group {{ if .FieldErrors.last_name }}has-error{{ end }}">
         <label for="reg-ln" class="col-sm-3 control-label">Last name *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-ln" name="last_name" placeholder="Last Name" value="{{ .LastName }}">
+            {{ if .FieldErrors.last_name }}
+                <span class="help-block">{{ .FieldErrors.last_name }}</span>
+            {{ end }}
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group {{ if .FieldErrors.login }}has-error{{ end }}">
         <label for="reg-login" class="col-sm-3 control-label">Login *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-login" name="login" placeholder="Login" value="{{ .Login }}">
+            {{ if .FieldErrors.login }}
+                <span class="help-block">{{ .FieldErrors.login }}</span>
+            {{ end }}
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group {{ if .FieldErrors.email }}has-error{{ end }}">
         <label for="reg-email" class="col-sm-3 control-label">e-mail address *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-email" name="email" placeholder="e-mail address" value="{{ .Email }}">
+            {{ if .FieldErrors.email }}
+                <span class="help-block">{{ .FieldErrors.email }}</span>
+            {{ end }}
         </div>
     </div>
     <div class="form-group">
@@ -61,28 +73,41 @@
 
     <h4>Affiliation</h4>
     <hr>
-    <div class="form-group">
+    <div class="form-group {{ if .FieldErrors.institute }}has-error{{ end }}">
         <label for="reg-institute" class="col-sm-3 control-label">Institute *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-institute" name="institute" placeholder="Institute" value="{{ .Institute }}">
+            {{ if .FieldErrors.institute }}
+                <span class="help-block">{{ .FieldErrors.institute }}</span>
+            {{ end }}
         </div>
     </div>
-    <div class="form-group">
+
+    <div class="form-group {{ if .FieldErrors.department }}has-error{{ end }}">
         <label for="reg-department" class="col-sm-3 control-label">Department *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-department" name="department" placeholder="Department" value="{{ .Department }}">
+            {{ if .FieldErrors.department }}
+                <span class="help-block">{{ .FieldErrors.department }}</span>
+            {{ end }}
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group {{ if .FieldErrors.city }}has-error{{ end }}">
         <label for="reg-city" class="col-sm-3 control-label">City *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-city" name="city" placeholder="City" value="{{ .City }}">
+            {{ if .FieldErrors.city }}
+                <span class="help-block">{{ .FieldErrors.city }}</span>
+            {{ end }}
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group {{ if .FieldErrors.country }}has-error{{ end }}">
         <label for="reg-country" class="col-sm-3 control-label">Country *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-country" name="country" placeholder="Country" value="{{ .Country }}">
+            {{ if .FieldErrors.country }}
+                <span class="help-block">{{ .FieldErrors.country }}</span>
+            {{ end }}
         </div>
     </div>
     <div class="form-group">
@@ -97,16 +122,19 @@
 
     <h4>Password</h4>
     <hr>
-    <div class="form-group">
+    <div class="form-group {{ if .FieldErrors.password }}has-error{{ end }}">
         <label for="reg-password-input" class="col-sm-3 control-label">Password *</label>
         <div class="col-sm-9">
             <input type="password" class="form-control" id="reg-password-input" name="password" placeholder="Password">
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group {{ if .FieldErrors.password }}has-error{{ end }}">
         <label for="reg-password-control" class="col-sm-3 control-label">Re-enter password *</label>
         <div class="col-sm-9">
             <input type="password" class="form-control" id="reg-password-control" name="password_control" placeholder="Password">
+            {{ if .FieldErrors.password }}
+                <span class="help-block">{{ .FieldErrors.password }}</span>
+            {{ end }}
         </div>
     </div>
     <div class="form-group">
