templates: cleanup activation page

--- a/resources/templates/activation.html
+++ b/resources/templates/activation.html
@@ -1,6 +1,6 @@
 {{ define "content" }}
 
 <h1>Account activation</h1>
-<div>Congratulation! The account for {{ .Login }} has been activated and can now be used.</div>
+<div>Congratulation {{ .FirstName }} {{ .LastName }}! The account for {{ .Login }} has been activated and can now be used.</div>
 
 {{ end }}
