Use centralized assets
* Dir resources/static is not needed anymore

--- a/resources/templates/approve.html
+++ b/resources/templates/approve.html
@@ -1,7 +1,7 @@
 {{ define "content" }}
 <h1>Approve Scopes</h1>
 <hr /><br>
-<p class="larger">
+<p class="lead">
     The client <strong>{{ .Client }}</strong> requests your approval for accessing the following scopes on your behalf:
 </p>
 <form action="/oauth/approve" method="post">
