templates: update reset password form

--- a/resources/templates/reset.html
+++ b/resources/templates/reset.html
@@ -3,7 +3,7 @@
     <h1>Enter new password</h1>
     <hr /><br>
 
-    <form action="" method="post" class="form-horizontal">
+    <form action="/oauth/reset" method="post" class="form-horizontal">
 
         <div class="form-group {{ if .FieldErrors.password }}has-error{{ end }}">
             <label for="password-input" class="col-sm-3 control-label">Password *</label>
