--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -141,6 +141,25 @@
             {{ end }}
         </div>
     </div>
+
+    <h4>Captcha</h4>
+    <hr>
+    <div>
+        <div class="col-sm-offset-3 col-sm-9">
+            <img id="image" src="/captcha/{{ .CaptchaId }}.png" alt="Captcha image">
+        </div>
+    </div>
+    <div class="form-group {{ if .FieldErrors.captcha}}has-error{{ end }}">
+        <label for="reg-captcha-resolve" class="col-sm-3 control-label">Please enter captcha *</label>
+        <div class="col-sm-9">
+            <input type="hidden" name="captcha_id" value="{{ .CaptchaId }}">
+            <input class="form-control" name="captcha_resolve" id="reg-captcha-resolve" placeholder="captcha resolve">
+            {{ if .FieldErrors.captcha }}
+                <span class="help-block">{{ .FieldErrors.captcha }}</span>
+            {{ end }}
+        </div>
+    </div>
+
     <div class="form-group">
         <div class="col-sm-9 col-sm-offset-3">
             <button type="submit" class="btn btn-default">Create account</button>
