captcha: rename captcha labels

--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -142,21 +142,21 @@
         </div>
     </div>
 
-    <h4>Captcha</h4>
     <hr>
     <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-9">Please verify you are a person:</div>
         <div class="col-sm-offset-3 col-sm-3">
             <img id="reg-image" src="/captcha/{{ .CaptchaId }}.png" alt="Captcha image">
         </div>
         <div class="col-sm-offset-6 col-sm-6">
-            <a href="#" onclick="reloadCaptcha()">Reload Captcha</a>
+            <a href="#" onclick="reloadCaptcha()">Reload image</a>
         </div>
     </div>
     <div class="form-group {{ if .FieldErrors.captcha}}has-error{{ end }}">
-        <label for="reg-captcha-resolve" class="col-sm-3 control-label">Please enter captcha *</label>
+        <label for="reg-captcha-resolve" class="col-sm-3 control-label">Enter displayed characters *</label>
         <div class="col-sm-9">
             <input type="hidden" name="captcha_id" id="reg-captcha-id" value="{{ .CaptchaId }}">
-            <input class="form-control" name="captcha_resolve" id="reg-captcha-resolve" placeholder="captcha resolution">
+            <input class="form-control" name="captcha_resolve" id="reg-captcha-resolve" placeholder="Enter characters">
             {{ if .FieldErrors.captcha }}
                 <span class="help-block">{{ .FieldErrors.captcha }}</span>
             {{ end }}
