--- a/resources/templates/login.html
+++ b/resources/templates/login.html
@@ -18,8 +18,11 @@
         <input type="hidden" id="request_id" name="request_id" value="{{ .RequestID }}">
 
         <div class="form-group">
-            <div class="col-sm-offset-1 col-sm-11">
+            <div class="col-sm-offset-1 col-sm-8">
                 <button type="submit" class="btn btn-default">Sign in</button>
+            </div>
+            <div class="col-sm-3 text-right">
+                <a href="/oauth/reset_init_page">Forgot password</a>
             </div>
         </div>
     </form>
