[templates] add registration request id field

--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -73,7 +73,7 @@
             </label>
         </div>
     </div>
-
+    <input type="hidden" name="request_id" id="reg-request-id" value="{{ .RequestId }}">
 
     <h4>Affiliation</h4>
     <hr>
